# TCC

./: .env.example  .gitignore  README.md  api_definitions.md  first_walkthrough.md  next_plan.md  pyproject.toml  rules.md  tcc_rules.md  walkthrough_sprint1.md
TCC-fontes/: Modelo TCC Artigo Atualizado.docx  graphic.html
regimentos_estatutos_resolucoes/PROEN/: TermoAdesão.docx  resolucao_3-2014 professor voluntário.doc
scripts/: run_etl.py  run_eval.py  run_indexing.py
src/: app.py  config.py  main.py
src/chat/: router.py  schemas.py  service.py
src/chunking/: legal_chunker.py
src/etl/: pdf_converter.py  revocation_filter.py
src/evaluation/: golden_dataset.json  ragas_eval.py
src/generation/: generator.py
src/indexing/: vector_store.py
src/retrieval/: hybrid_search.py  reranker.py
